[gd_scene load_steps=3 format=3 uid="uid://bgk3uhfd36e8r"]

[ext_resource type="Script" path="res://Label.gd" id="1_apjnh"]
[ext_resource type="Script" path="res://OpenButton.gd" id="1_c5v4w"]

[node name="ui" type="Node"]

[node name="OpenButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Open
"
script = ExtResource("1_c5v4w")

[node name="SaveButton" type="Button" parent="."]
offset_left = 56.0
offset_right = 100.0
offset_bottom = 31.0
text = "Save"

[node name="Node" type="Node" parent="."]
script = ExtResource("1_apjnh")

[node name="CategoriesContainer" type="HFlowContainer" parent="."]
offset_left = 118.0
offset_top = 34.0
offset_right = 418.0
offset_bottom = 64.0

[node name="Button" type="Button" parent="."]
offset_left = 2.0
offset_top = 33.0
offset_right = 114.0
offset_bottom = 64.0
text = "Add Category"

[node name="Items" type="ItemList" parent="."]
offset_left = 252.0
offset_top = 70.0
offset_right = 798.0
offset_bottom = 552.0

[node name="ItemProps" type="ItemList" parent="."]
offset_left = 3.0
offset_top = 68.0
offset_right = 236.0
offset_bottom = 554.0

[connection signal="file_selected" from="OpenButton" to="Node" method="_on_select_source"]
[connection signal="pressed" from="SaveButton" to="Node" method="_on_save"]
